H47 Notify user when some one react or accept friend request
