# src/config/routes/index.js
@@ -8,6 +8,7 @@ const {RequestController} = require("../../services/request/RequestController");
 const {PostController} = require("../../services/post/PostController");
 const {NewsFeedController} = require("../../services/newFeed/NewFeedController");
 const {TestController} = require("../../services/test/TestController");
+const {NotificationController} = require("../../services/notifications/NotificationController");
 
 function configRoute(app) {
   // app.use((req, res, next) => {
@@ -21,7 +22,7 @@ function configRoute(app) {
   app.use('/request', RequestController);
   app.use('/post', PostController);
   app.use('/news-feed', NewsFeedController);
-
+  app.use('/notifications', NotificationController)
   if( ['dev', 'int'].includes(process.env.NODE_ENV)) {
     app.use('/test', TestController)
 
